--- a/ict2103Part1/package.json
+++ b/ict2103Part1/package.json
@@ -21,6 +21,7 @@
     "express-session": "latest",
     "file-base64": "^1.0.0",
     "forever-monitor": "^1.7.1",
+    "formidable": "^1.2.1",
     "fs-extra": "latest",
     "http-proxy": "latest",
     "md5": "latest",
@@ -31,7 +32,7 @@
     "multer": "^1.4.0",
     "mysql": "^2.16.0",
     "node-constants": "latest",
-    "nodemailer": "^2.4.1",
+    "nodemailer": "^2.7.2",
     "nodemailer-smtp-transport": "^2.5.0",
     "nodemon": "^1.18.4",
     "numeral": "latest",
@@ -40,6 +41,7 @@
     "passport-local": "latest",
     "pm2": "latest",
     "rand-token": "^0.4.0",
+    "randomstring": "^1.1.5",
     "request": "latest",
     "serve-favicon": "^2.5.0",
     "simple-encryptor": "latest",
